--- a/nft-marketplace/src/styles/NftModal.css
+++ b/nft-marketplace/src/styles/NftModal.css
@@ -1,76 +1,66 @@
-.modal-container {
-  position: fixed;
-  z-index: 9999;
+.nft-modal {
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 1;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.modal {
-  position: relative;
-  width: 500px;
-  max-width: 90%;
+.modal-wrapper {
+  width: 312px;
+  height: 400px;
   background-color: #fff;
-  border-radius: 4px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-}
-
-.modal-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.modal-header h2 {
-  font-size: 24px;
-  font-weight: bold;
-  margin: 0;
-}
-
-.modal-content {
+  border-radius: 10px;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
 }
 
-.modal-content img {
-  max-width: 100%;
-  margin-bottom: 20px;
-  border-radius: 4px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.modal-content p {
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.modal-content a {
-  color: #fff;
-  background-color: #1e88e5;
-  padding: 10px 20px;
-  border-radius: 4px;
-  text-decoration: none;
-  margin-top: 20px;
-  transition: background-color 0.3s ease;
-}
-
-.modal-content a:hover {
-  background-color: #0d47a1;
-}
-
-.close-icon {
+.nft-modal-close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 20px;
+  font-size: 30px;
+  color: #fff;
   cursor: pointer;
-  color: #333;
-  font-size: 24px;
+}
+
+.nft-modal-close:hover {
+  color: #ccc;
+}
+
+.nft-image {
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
+  margin-bottom: 20px;
+}
+
+.purchase-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #008cba;
+  color: #fff;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.purchase-button:hover {
+  background-color: #006080;
+}
+
+.modal-wrapper:hover {
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
